MDL-52936 - Fix link hover bug on iOS.

--- a/less/moodle/core.less
+++ b/less/moodle/core.less
@@ -1070,7 +1070,7 @@ body.tag .managelink {
     float: right;
     padding: 3px;
     margin: 3px;
-    > *:hover {
+    > a:hover {
         border-bottom:1px solid #666;
     }
 }
